<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:background="@drawable/login_button"
        android:id="@+id/container_login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/textView"
            android:layout_centerInParent="true"
            android:textSize="36sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textAllCaps="true"
            android:id="@+id/id_btn_signin"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textAllCaps="true"
            android:id="@+id/id_btn_signup"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:textColor="@color/gray"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"/>


</RelativeLayout>


